--- a/index.html
+++ b/index.html
@@ -1,64 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Automantia</title>
-    <link rel="icon" href="/images/automatia_logo.png">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <!-- Our css link -->
-    <link rel="stylesheet" href="/css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Automantia</title>
+  <link rel="icon" href="/images/automatia_logo.png">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <!-- Our css link -->
+  <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    <!-- navbar -->
-    <section id="header">
-        <nav class="navbar navbar-expand-lg  fixed-top" style="background: #0A0A08 ;">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><h2>
-                <img src="/images/automatia_logo.png" class="img-fluid logo"> Automantia</h2> </a>
-              <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Solutions</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About us</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="#">Contact</a>
-                  </li>
-                </ul>
-              </div>
+  <!-- navbar -->
+  <section id="header">
+    <nav class="navbar navbar-expand-lg  fixed-top " style="background: black;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <h2>
+            <img src="/images/automatia_logo.png" class="img-fluid logo"> Automantia
+          </h2>
+        </a>
+        <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Solutions</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </section>
+  <!-- nav bar end -->
+  <!-- slider  -->
+  <section class="second">
+    <div class="row mt-5">
+      <div class="col-md-12">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/s1.png" class="img-fluid d-block w-100  " alt="...">
             </div>
-          </nav>
-    </section>
-    <!-- nav bar end -->
-    <!-- slider  -->
-    <section class="second">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
+            <div class="carousel-item">
+              <img src="images/s2.png" class="img-fluid d-block w-100 h-100 " alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/s3.png" class="img-fluid d-block w-100 h-100 " alt="...">
             </div>
           </div>
-    </section>
-    <!-- slider end -->
-    
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- slider end -->
+  <!-- automantia intro -->
+  <section class="third mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+              <div class="titlepage">
+                <span>Welcome</span>
+                <h2>AutomanTia Inc.</h2>
+                <p>When it comes to Purchasing your car, AutomanTia is your one stop solution. Exchange your
+                  car of any brand and ensure that your vehicle is given the care it deserves. In
+                  addition, enjoy the various benefits offered by AutomanTia's Pricing Mechanism Through
+                  Digital Evaluation
+                  Hassle Free Transfer Of Ownership
+                  Quick Disbursement Process
+                  Exclusive Exchange Offers While Upgrading To a newer Seer
+                  Best Market Rate For Your Car</p>
+                <a class="read_more" href="#">Read More</a>
+              </div>
+          </div>
+          <div class="col-md-6">
+            <img src="https://images.unsplash.com/photo-1580014317999-e9f1936787a5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=327&q=80">
+          </div>
+          </div>
+        </div>
+      </div>
+  </section>
+  <!-- automantia intro -->
 
 
 
@@ -68,7 +115,11 @@
 
 
 
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
