--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <!-- Our css link -->
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/responsive.css">
 </head>
 
 <body>
   <!-- navbar -->
   <section id="header">
-    <nav class="navbar navbar-expand-lg  fixed-top " style="background: black;">
+    <nav class="navbar navbar-expand-lg  " style="background: black;">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <h2>
@@ -50,7 +51,7 @@
   <!-- nav bar end -->
   <!-- slider  -->
   <section class="second">
-    <div class="row mt-5">
+    <div class="row ">
       <div class="col-md-12">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
