--- a/index.html
+++ b/index.html
@@ -49,8 +49,18 @@
     </nav>
   </section>
   <!-- nav bar end -->
+  <section>
+    <div class="row">
+      <div class="col-md-12">
+        <video class="w-100" autoplay loop muted>
+          <source src="images/video.mp4.mp4" type="video/mp4" />
+        </video>
+      </div>
+
+    </div>
+  </section>
   <!-- slider  -->
-  <section class="second">
+  <!-- <section class="second">
     <div class="row ">
       <div class="col-md-12">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -78,37 +88,32 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- slider end -->
-  <!-- automantia intro -->
-  <section class="third mt-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-              <div class="titlepage">
-                <span>Welcome</span>
-                <h2>AutomanTia Inc.</h2>
-                <p>When it comes to Purchasing your car, AutomanTia is your one stop solution. Exchange your
-                  car of any brand and ensure that your vehicle is given the care it deserves. In
-                  addition, enjoy the various benefits offered by AutomanTia's Pricing Mechanism Through
-                  Digital Evaluation
-                  Hassle Free Transfer Of Ownership
-                  Quick Disbursement Process
-                  Exclusive Exchange Offers While Upgrading To a newer Seer
-                  Best Market Rate For Your Car</p>
-                <a class="read_more" href="#">Read More</a>
-              </div>
-          </div>
-          <div class="col-md-6">
-            <img src="https://images.unsplash.com/photo-1580014317999-e9f1936787a5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=327&q=80">
-          </div>
-          </div>
+  <!-- section 3 -->
+  <section id="third ">
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-md-7">
+          <p>Welcome</p>
+          <h2 style="color: aquamarine;">AutomanTia Inc.</h2>
+          <p>When it comes to Purchasing your car, AutomanTia is your one stop solution. Exchange your
+            car of any brand and ensure that your vehicle is given the care it deserves. In
+            addition, enjoy the various benefits offered by AutomanTia's Pricing Mechanism Through
+            Digital Evaluation
+            Hassle Free Transfer Of Ownership
+            Quick Disbursement Process
+            Exclusive Exchange Offers While Upgrading To a newer Seer
+            Best Market Rate For Your Car
+          </p>
+        </div>
+        <div class="col-md-5">
+          
         </div>
       </div>
+    </div>
   </section>
-  <!-- automantia intro -->
-
-
+  <!-- section 3 end -->
 
 
 
