--- a/index.html
+++ b/index.html
@@ -91,24 +91,27 @@
   </section> -->
   <!-- slider end -->
   <!-- section 3 -->
-  <section id="third ">
-    <div class="container mt-5">
-      <div class="row">
-        <div class="col-md-7">
-          <p>Welcome</p>
-          <h2 style="color: aquamarine;">AutomanTia Inc.</h2>
-          <p>When it comes to Purchasing your car, AutomanTia is your one stop solution. Exchange your
-            car of any brand and ensure that your vehicle is given the care it deserves. In
-            addition, enjoy the various benefits offered by AutomanTia's Pricing Mechanism Through
-            Digital Evaluation
-            Hassle Free Transfer Of Ownership
-            Quick Disbursement Process
-            Exclusive Exchange Offers While Upgrading To a newer Seer
-            Best Market Rate For Your Car
-          </p>
-        </div>
-        <div class="col-md-5">
-          
+  <section id="third  ">
+    <div class="container-fluid">
+      <div class="container">
+        <div class="row mt-5">
+
+          <div class="col-md-7">
+            <h4>Welcome</h4>
+            <h1 style="color: aquamarine;">AutomanTia Inc.</h1>
+            <h4 style="text-align: left;">When it comes to Purchasing your car, AutomanTia is your one stop solution. Exchange your
+              car of any brand and ensure that your vehicle is given the care it deserves. In
+              addition, enjoy the various benefits offered by AutomanTia's Pricing Mechanism Through
+              Digital Evaluation
+              Hassle Free Transfer Of Ownership
+              Quick Disbursement Process
+              Exclusive Exchange Offers While Upgrading To a newer Seer
+              Best Market Rate For Your Car
+            </h4>
+          </div>
+          <div class="col-md-5">
+
+          </div>
         </div>
       </div>
     </div>
