--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
   <!-- Our css link -->
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/responsive.css">
+  <link rel="stylesheet" href="/css/footer.css">
+  <link rel="stylesheet" href="/css/card.css">
 </head>
 
 <body>
   <!-- navbar -->
   <section id="header">
-    <nav class="navbar navbar-expand-lg  " style="background: black;">
+    <nav class="navbar navbar-expand-lg  " style="background: #01071e;">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <h2>
@@ -90,16 +92,43 @@
     </div>
   </section> -->
   <!-- slider end -->
+
+
+
+  <!-- section 2 -->
+  <section id="second">
+    <div class="container-fluid mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2"></div>
+          <div class="col-md-8">
+            <h1>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro sit, laborum labore perferendis quod
+              doloribus mollitia corrupti quam. Optio velit ad repellendus autem laudantium tempora voluptates non ipsum
+              aliquam impedit.</h1>
+            <p>ipsum dolor sit amet, consectetur adipisicing elit. Optio eveniet in beatae magni velit veniam autem
+              ratione quas magnam necessitatibus. Voluptates cum iusto, fuga nostrum explicabo nobis nisi distinctio
+              dicta.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- section 2 end -->
+
+
   <!-- section 3 -->
-  <section id="third  ">
-    <div class="container-fluid">
+  <section id="third mt-5 ">
+    <div class="container-fluid mt-5">
       <div class="container">
         <div class="row mt-5">
 
-          <div class="col-md-7">
+          <div class="col-md-6">
             <h4>Welcome</h4>
             <h1 style="color: aquamarine;">AutomanTia Inc.</h1>
-            <h4 style="text-align: left;">When it comes to Purchasing your car, AutomanTia is your one stop solution. Exchange your
+            <h4 style="text-align: left;">When it comes to Purchasing your car, AutomanTia is your one stop solution.
+              Exchange your
               car of any brand and ensure that your vehicle is given the care it deserves. In
               addition, enjoy the various benefits offered by AutomanTia's Pricing Mechanism Through
               Digital Evaluation
@@ -109,22 +138,170 @@
               Best Market Rate For Your Car
             </h4>
           </div>
-          <div class="col-md-5">
 
+          <div class="col-md-6">
+            <video class="w-100" autoplay loop muted>
+              <source src="/images/Neon Power Logo Reveal_free (online-video-cutter.com).mp4" type="video/mp4" />
+            </video>
           </div>
         </div>
       </div>
     </div>
   </section>
   <!-- section 3 end -->
+  <!-- card section -->
+  <div class="cover">
+    <div class="overlay"></div>
+    <div class="content text-center">
+      <h1>Some Features That Made AutomanTia Unique</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, eum?
+      </p>
+    </div>
+  </div>
+  <div class="container-fluid text-center">
+    <div class="numbers d-flex flex-md-row flex-wrap justify-content-center">
+      <div class="rect">
+        <h1>2,345</h1>
+        <p>Happy Client</p>
+      </div>
+      <div class="rect">
+        <h1>61,784</h1>
+        <p>Cars Sold</p>
+      </div>
+      <div class="rect">
+        <h1>1,056</h1>
+        <p>Modified Editions</p>
+      </div>
+      <div class="rect">
+        <h1>152</h1>
+        <p>Collaborated Companies</p>
+      </div>
+    </div>
+  </div>
+  <!-- card section end -->
+
+  <!-- section 4 -->
+  <section class="section-3 container-fluid p-0 text-center mb-5">
+    <div class="row">
+      <div class="col-md-12 col-sm-12">
+        <h1>Download Our App for all Platform</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum exercitationem alias perspiciatis omnis quod
+          possimus odit
+          voluptatum! Sunt ea quasi praesentium, tenetur doloribus animi obcaecati, sint nemo quae laudantium iusto unde
+          eaque nostrum nobis voluptatum
+        </p>
+      </div>
+    </div>
+    <div class="platform row">
+      <div class="col-md-6 col-sm-12 text-right">
+        <div class="desktop shadow-lg">
+          <div class="d-flex flex-row justify-content-center">
+            <i class="fas fa-desktop fa-3x py-2 pr-3"></i>
+            <div class="text text-left">
+              <h3 class="pt-1 m-0">Desktop</h3>
+              <p class="p-0 m-0">On website</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-sm-12 text-left">
+        <div class="desktop shadow-lg">
+          <div class="d-flex flex-row justify-content-center">
+            <i class="fas fa-mobile-alt fa-3x py-2 pr-3"></i>
+            <div class="text text-left">
+              <h3 class="pt-1 m-0">On Mobile</h3>
+              <p class="p-0 m-0">On Play Store</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- section 4 end -->
 
 
 
 
 
+  <!-- footer section -->
+  <section>
+
+    <div class="container-fluid footerblock mt-5">
+      <div class="container mt-5">
+        <div class="row ">
+          <div class="col-md-5  mt-5 footerimg ">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 ">
+              <a href="file:///F:/bootstrap/firstfiidle.html">
+                <img src="/images/automatia_logo.png" class="img-fluid w-100">
+              </a>
+            </div>
+          </div>
+          <div class="col-md-7  mt-5 footercontent">
+            <h2 style="font-family: prague;"><span style="color: aquamarine;">CONTACT</span> US</h2>
+            <br>
+            <p>We're a team focusing on redefining the way the hospitality industry works by bringing in concept based
+              restaurants across India. We are truly committed to catering to the ever-changing cosmopolitan taste of
+              the customer and revolutioning the F & B industry!</p>
+            <div class="container mt-5 ms-auto">
+              <div class="row">
+                <div class="col-md-6 footerheadings">
+                  <h4>ADDRESS</h4>
+                  <p> <a href="#">6, Chanakyapuri Shopping Complex, 48, Malcha Marg, New Delhi 110021</a> </p>
+                </div>
+                <div class="col-md-6 footerheadings">
+                  <h4>FRANCHISE ENQUIRY</h4>
+                  <p>Mobile:<a href="#"> +91626141383</a></p>
+                  <p style="    margin-top: -18px;">Email:<a href="#"> shikharpundhir84@gmail.com</a></p>
+
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6  mt-4  footerheadings">
+                  <h4>HR Enquiry</h4>
+                  <p>Mobile:<a href="#"> +91626141383</a></p>
+                  <p style="    margin-top: -18px;">Email:<a href="#"> shikharpundhir84@gmail.com</a></p>
+                </div>
+                <div class="col-md-6 mt-4 footerheadings">
+                  <h4>OTHER ENQUIRY</h4>
+
+                  <p style="    margin-top: px;">Email:<a href="#"> shikharpundhir84@gmail.com</a></p>
+
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6  mt-4 footericons  ">
+                  <a href=""><i class="fa-brands fa-linkedin fa-3x"></i></a>
+                  <a href=""><i class="fa-brands fa-facebook fa-3x"></i></a>
+                  <a href=""><i class="fa-brands fa-twitter fa-3x"></i></a>
+                  <a href=""><i class="fa-brands fa-instagram fa-3x"></i></a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="container-fluid footerend w-100">
+      <div class="container">
+        <div class="footerend2 text-center">
+          <p>PRIVACY POLICY | TERMS AND CONDITIONS | <a href="#">Blog</a></p>
+
+          <p>COPYRIGHT © 2021 <a href="#">FIRST FIDDLE F&B PRIVATE LIMITED</a></p>
+        </div>
+      </div>
+
+    </div>
 
 
 
+
+  </section>
+  <!-- footer section end -->
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
