--- a/index.html
+++ b/index.html
@@ -18,9 +18,19 @@
 </head>
 
 <body>
+  <section>
+    <div class="row">
+      <div class="col-md-12">
+        <video class="w-100" autoplay loop muted>
+          <source src="images/video.mp4.mp4" type="video/mp4" />
+        </video>
+      </div>
+
+    </div>
+  </section>
   <!-- navbar -->
   <section id="header">
-    <nav class="navbar navbar-expand-lg  " style="background: #01071e;">
+    <nav class="navbar navbar-expand-lg fixed-top " style="background: #01071e;">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <h2>
@@ -43,7 +53,7 @@
               <a class="nav-link" href="#">About us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="#">Contact</a>
+              <a class="nav-link " href="/contactus.html">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -51,16 +61,7 @@
     </nav>
   </section>
   <!-- nav bar end -->
-  <section>
-    <div class="row">
-      <div class="col-md-12">
-        <video class="w-100" autoplay loop muted>
-          <source src="images/video.mp4.mp4" type="video/mp4" />
-        </video>
-      </div>
-
-    </div>
-  </section>
+ 
   <!-- slider  -->
   <!-- <section class="second">
     <div class="row ">
@@ -96,25 +97,7 @@
 
 
   <!-- section 2 -->
-  <section id="second">
-    <div class="container-fluid mt-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-2"></div>
-          <div class="col-md-8">
-            <h1>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro sit, laborum labore perferendis quod
-              doloribus mollitia corrupti quam. Optio velit ad repellendus autem laudantium tempora voluptates non ipsum
-              aliquam impedit.</h1>
-            <p>ipsum dolor sit amet, consectetur adipisicing elit. Optio eveniet in beatae magni velit veniam autem
-              ratione quas magnam necessitatibus. Voluptates cum iusto, fuga nostrum explicabo nobis nisi distinctio
-              dicta.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  
   <!-- section 2 end -->
 
 
@@ -123,11 +106,11 @@
     <div class="container-fluid mt-5">
       <div class="container">
         <div class="row mt-5">
-
-          <div class="col-md-6">
-            <h4>Welcome</h4>
-            <h1 style="color: aquamarine;">AutomanTia Inc.</h1>
-            <h4 style="text-align: left;">When it comes to Purchasing your car, AutomanTia is your one stop solution.
+          <div class="col-md-1"> </div>
+          <div class="col-md-10">
+            <h4 style="text-align: center;">Welcome</h4>
+            <h1 style="color: aquamarine; text-align: center;">AutomanTia Inc.</h1><br>
+            <h4 style="text-align: justify;">When it comes to Purchasing your car, AutomanTia is your one stop solution.
               Exchange your
               car of any brand and ensure that your vehicle is given the care it deserves. In
               addition, enjoy the various benefits offered by AutomanTia's Pricing Mechanism Through
@@ -138,8 +121,10 @@
               Best Market Rate For Your Car
             </h4>
           </div>
-
-          <div class="col-md-6">
+        </div>
+        <div class="row mt-4" >
+          <div class="col-md-2"></div>
+          <div class="col-md-8">
             <video class="w-100" autoplay loop muted>
               <source src="/images/Neon Power Logo Reveal_free (online-video-cutter.com).mp4" type="video/mp4" />
             </video>
@@ -182,7 +167,7 @@
   <!-- card section end -->
 
   <!-- section 4 -->
-  <section class="section-3 container-fluid p-0 text-center mb-5">
+  <section class="section-4 container-fluid p-0 text-center mb-5">
     <div class="row">
       <div class="col-md-12 col-sm-12">
         <h1>Download Our App for all Platform</h1>
