--- a/contactus.html
+++ b/contactus.html
@@ -26,13 +26,18 @@
 
 <body>
     <section>
-        <div class="row">
+        <div class="row video-row">
             <div class="col-md-12">
                 <video class="w-100" autoplay loop muted>
                     <source src="images//VN20220924_090956.mp4" type="video/mp4" />
                 </video>
             </div>
-
+            <div class="row">
+        
+                <div class="col-md-4">
+                  <h1>Contact Us</h1>
+                </div>
+              </div>
         </div>
     </section>
     <!-- navbar -->
@@ -55,13 +60,18 @@
                             <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Solutions</a>
+                            <a class="nav-link" href="collections.html">Collections</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="#">Contact Us</a>
+                            <a class="nav-link " href="contactus.html">Contact Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                Stories
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -69,6 +79,63 @@
         </nav>
     </section>
     <!-- nav bar end -->
+     <!-- Modal -->
+     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" style="max-width: 800px; display: flex; flex-wrap: wrap;">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">STORIES</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                        <div class="row mt-5">
+                            <div class="col-md-6">
+                                <h3>Sidestepping inflation, luxury brands see a bounce back</h3>
+                                <p>The Local Report.in</p>
+                            </div>
+                            <div class="col-md-6">
+                                <h3> kylie jenner and husband Travis Scott buy a luxury car; watch them check out its interiors</h3>
+                                <p>The Times of New YORK</p>
+                            </div>
+
+                        </div>
+                        <div class="row mt-5">
+                            <div class="col-md-6">
+                                <h3>Dhoni’s love for vehicles makes him proud owner of Land Rover 3</h3>
+                                <p>The Indian Times.in</p>
+                            </div>
+                            <div class="col-md-6">
+                                <h3> AutomanTia First Ever Online Auction of Vintage and Classic cars Saw Huge participation from Car Enthusiasts. Next auction to be held in the month of February</h3>
+                                <p>The FM Live</p>
+                            </div>
+
+                        </div>
+                        <div class="row mt-5">
+                            <div class="col-md-6">
+                                <h3>Chip Shortage Has Helped Boost Demand For Pre-Owned Luxury Cars: Industry Players</h3>
+                                <p>Tech Times</p>
+                            </div>
+                            <div class="col-md-6">
+                                <h3>AutomanTia introduces unique way to sell your car in less than 29 mins</h3>
+                                <p>The ADS square</p>
+                            </div>
+
+                        </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
 
 
     <!-- contact us section -->
@@ -114,7 +181,7 @@
                                 </div>
 
 
-                                <textarea style="border-radius: 15px;" rows="5" cols="65" placeholder=" Message"></textarea>
+                                <textarea style="border-radius: 15px;" rows="5" cols="40" placeholder=" Message"></textarea>
                                 <br>
                             </div>
                             <div class="mb-3 form-check">
@@ -122,7 +189,12 @@
                                 <label class="form-check-label" for="exampleCheck1">I am not a Robot</label>
                             </div>
 
-                            <button type="submit" class="btn btn-primary ">Submit</button>
+                            <button type="submit" class="btn  " style="margin-top: 10px;
+                            border-radius: 8px;
+                            font-weight: 400;
+                            width: 100px;
+                            color: black;
+                            background-color: aquamarine;" >Submit</button>
                         </form>
                     </div>
                 </div>
@@ -169,7 +241,7 @@
                         <div class="col-md-2"></div>
                         <div class="col-md-8 ">
                             <a href="file:///F:/bootstrap/firstfiidle.html">
-                                <img src="/images/automatia_logo.png" class="img-fluid w-100">
+                                <img src="/images/automatia_logo.png" class="img-fluid i1">
                             </a>
                         </div>
                     </div>
