--- a/testing.html
+++ b/testing.html
@@ -58,25 +58,10 @@
 </head>
 
 <body>
-	<div class="main-container">
-        <div class="the-card">
-            <div class="front">
-                <div class="col-md-3 price ">
-                    <h3>Ferrari 296 GTB</h3>
-                    <h6><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
-                            class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></h6>
-                    <h4>$321,400 USD</h4>
-                    <button type="submit" class="btn btn-primary ">Check Offers</button>
-                </div>
-            </div>
-            <div class="back">
-                <h1>BACK HU MAI</h1>
-            </div>
-        </div>
-
-    </div>
-
-
+	<div class="col-md-12">
+        <video class="w-100" autoplay loop muted>
+          <source src="https://photos.google.com/share/AF1QipOKzNh7aAejdCqn1ifQJ7TnFIqMFhU3zwooYG5_lBrR8u19TLAMxPjR7suISa5sZA/photo/AF1QipMf_pQwsq9YILG1_hxu9JmSyvnxi0E9Hmi-cjqb?key=YXdYZ0UzeG5EbE5hY25fN0JCWXNUNEUyVDJYOGtB"  />
+        </video>
 
 	<!-- bootsrap 5 js -->	
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
