--- a/whyus.html
+++ b/whyus.html
@@ -20,17 +20,17 @@
 <body>
   <section>
 
-    <div class="row video-row">
+    <div class="row video-row whyus">
       <div class="col-md-12">
         <video class="w-100" autoplay loop muted>
-          <source src="images/video.mp4.mp4" type="video/mp4" />
+          <source src="images/VN20220924_085734.mp4" type="video/mp4" />
         </video>
        
       </div>
       <div class="row">
         
       <div class="col-md-4">
-        <h1>AutomanTia</h1>
+        <h1> &nbsp; &nbsp; Why Us ?</h1>
       </div>
     </div>
 
@@ -59,7 +59,7 @@
               <a class="nav-link" href="/collections.html">Collections</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About us</a>
+              <a class="nav-link" href="/whyus.html">Why us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="/contactus.html">Contact Us</a>
