--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <a class="nav-link" href="/collections.html">Collections</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About us</a>
+              <a class="nav-link" href="/whyus.html">Why us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="/contactus.html">Contact Us</a>
