--- a/whyus.html
+++ b/whyus.html
@@ -23,7 +23,7 @@
     <div class="row video-row whyus">
       <div class="col-md-12">
         <video class="w-100" autoplay loop muted>
-          <source src="images/whyus.mp4" type="video/mp4" />
+          <source src="images/whyus1.mp4" type="video/mp4" />
         </video>
 
       </div>
