--- a/collections.html
+++ b/collections.html
@@ -434,7 +434,7 @@
                         </div>
                         <div class="col-md-3 price d2">
                             <div class="front-specs f1">
-                                <h3> Lamborghini Huracan Evo </h3>
+                                <h3> Huracan Evo </h3>
                                 <h6><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
                                         class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
                                         class="fa-regular fa-star"></i></h6>
@@ -539,7 +539,7 @@
                     </div>
                     <div class="col-md-3 price d2">
                         <div class="front-specs f1 ">
-                            <h3>Audi R8 V10 quattro</h3>
+                            <h3>Audi R8 V10</h3>
                             <h6><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
                                     class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i><i
                                     class="fa-regular fa-star"></i></h6>
