--- a/index.html
+++ b/index.html
@@ -229,10 +229,7 @@
       <div class="col-md-12 col-sm-12">
         <h1>Download Our App for all Platform</h1>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum exercitationem alias perspiciatis omnis quod
-          possimus odit
-          voluptatum! Sunt ea quasi praesentium, tenetur doloribus animi obcaecati, sint nemo quae laudantium iusto unde
-          eaque nostrum nobis voluptatum
+          At AutomanTia our vision is to buy and sell modern cars that define quality and luxury for the 21st century. Applying our expertise in this industry, we aspire to transform the exotic car market, where cars are the ultimate expression of modern dynamism and luxury
         </p>
       </div>
     </div>
@@ -284,32 +281,30 @@
           <div class="col-md-7  mt-5 footercontent">
             <h2 style="font-family: prague;"><span style="color: aquamarine;">CONTACT</span> US</h2>
             <br>
-            <p>We're a team focusing on redefining the way the hospitality industry works by bringing in concept based
-              restaurants across India. We are truly committed to catering to the ever-changing cosmopolitan taste of
-              the customer and revolutioning the F & B industry!</p>
+            <p>We believe in the philosophy, that If you can’t keep your customers Happy better not to do that business. At AutomanTia the aim has always been to dream big and achieve great. Welcome to our showroom's tour.</p>
             <div class="container mt-5 ms-auto">
               <div class="row">
                 <div class="col-md-6 footerheadings">
                   <h4>ADDRESS</h4>
-                  <p> <a href="#">6, Chanakyapuri Shopping Complex, 48, Malcha Marg, New Delhi 110021</a> </p>
+                  <p> <a href="#">269 - 271 Glen Osmond Rd, Frewville</a> </p>
                 </div>
                 <div class="col-md-6 footerheadings">
-                  <h4>FRANCHISE ENQUIRY</h4>
-                  <p>Mobile:<a href="#"> +91626141383</a></p>
-                  <p style="    margin-top: -18px;">Email:<a href="#"> shikharpundhir84@gmail.com</a></p>
+                  <h4>Headquaters</h4>
+                  <p>Mobile:<a href="#"> +9196541414</a></p>
+                  <p style="    margin-top: -18px;">Email:<a href="#"> automantiaheadquaters@gmail.com</a></p>
 
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-6  mt-4  footerheadings">
-                  <h4>HR Enquiry</h4>
-                  <p>Mobile:<a href="#"> +91626141383</a></p>
-                  <p style="    margin-top: -18px;">Email:<a href="#"> shikharpundhir84@gmail.com</a></p>
+                  <h4>Dealership Enquiry</h4>
+                  <p>Mobile:<a href="#"> +91745851236</a></p>
+                  <p style="    margin-top: -18px;">Email:<a href="#"> AutomanTia@gmail.com</a></p>
                 </div>
                 <div class="col-md-6 mt-4 footerheadings">
-                  <h4>OTHER ENQUIRY</h4>
+                  <h4>Other Enquiry</h4>
 
-                  <p style="    margin-top: px;">Email:<a href="#"> shikharpundhir84@gmail.com</a></p>
+                  <p style="    margin-top: px;">Email:<a href="#"> Automantiaothers@gmail.com</a></p>
 
                 </div>
               </div>
