--- a/contactus.html
+++ b/contactus.html
@@ -231,88 +231,81 @@
 
 
 
-    <!-- footer section -->
-    <section>
+     <!-- footer section -->
+  <section>
 
-        <div class="container-fluid footerblock mt-5">
-            <div class="container mt-5">
-                <div class="row ">
-                    <div class="col-md-5  mt-5 footerimg ">
-                        <div class="col-md-2"></div>
-                        <div class="col-md-8 ">
-                            <a href="file:///F:/bootstrap/firstfiidle.html">
-                                <img src="/images/automatia_logo.png" class="img-fluid i1">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-7  mt-5 footercontent">
-
-                        <br>
-                        <p>We're a team focusing on redefining the way the hospitality industry works by bringing in
-                            concept based
-                            restaurants across India. We are truly committed to catering to the ever-changing
-                            cosmopolitan taste of
-                            the customer and revolutioning the F & B industry!</p>
-                        <div class="container mt-5 ms-auto">
-                            <div class="row">
-                                <div class="col-md-6 footerheadings">
-                                    <h4>ADDRESS</h4>
-                                    <p> <a href="#">6, Chanakyapuri Shopping Complex, 48, Malcha Marg, New Delhi
-                                            110021</a> </p>
-                                </div>
-                                <div class="col-md-6 footerheadings">
-                                    <h4>FRANCHISE ENQUIRY</h4>
-                                    <p>Mobile:<a href="#"> +91626141383</a></p>
-                                    <p style="    margin-top: -18px;">Email:<a href="#"> shikharpundhir84@gmail.com</a>
-                                    </p>
-
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6  mt-4  footerheadings">
-                                    <h4>HR Enquiry</h4>
-                                    <p>Mobile:<a href="#"> +91626141383</a></p>
-                                    <p style="    margin-top: -18px;">Email:<a href="#"> shikharpundhir84@gmail.com</a>
-                                    </p>
-                                </div>
-                                <div class="col-md-6 mt-4 footerheadings">
-                                    <h4>OTHER ENQUIRY</h4>
-
-                                    <p style="    margin-top: px;">Email:<a href="#"> shikharpundhir84@gmail.com</a></p>
-
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6  mt-4 footericons  ">
-                                    <a href=""><i class="fa-brands fa-linkedin fa-3x"></i></a>
-                                    <a href=""><i class="fa-brands fa-facebook fa-3x"></i></a>
-                                    <a href=""><i class="fa-brands fa-twitter fa-3x"></i></a>
-                                    <a href=""><i class="fa-brands fa-instagram fa-3x"></i></a>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
+    <div class="container-fluid footerblock mt-5">
+      <div class="container mt-5">
+        <div class="row ">
+          <div class="col-md-5  mt-5 footerimg ">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 ">
+              <a href="file:///F:/bootstrap/firstfiidle.html">
+                <img src="/images/automatia_logo.png" class="img-fluid i1">
+              </a>
             </div>
-
-        </div>
-        <div class="container-fluid footerend w-100">
-            <div class="container">
-                <div class="footerend2 text-center">
-                    <p>PRIVACY POLICY | TERMS AND CONDITIONS | <a href="#">Blog</a></p>
-
-                    <p>COPYRIGHT © 2021 <a href="#">FIRST FIDDLE F&B PRIVATE LIMITED</a></p>
+          </div>
+          <div class="col-md-7  mt-5 footercontent">
+            <h2 style="font-family: prague;"><span style="color: aquamarine;">CONTACT</span> US</h2>
+            <br>
+            <p>We believe in the philosophy, that If you can’t keep your customers Happy better not to do that business. At AutomanTia the aim has always been to dream big and achieve great. Welcome to our showroom's tour.</p>
+            <div class="container mt-5 ms-auto">
+              <div class="row">
+                <div class="col-md-6 footerheadings">
+                  <h4>ADDRESS</h4>
+                  <p> <a href="#">269 - 271 Glen Osmond Rd, Frewville</a> </p>
                 </div>
+                <div class="col-md-6 footerheadings">
+                  <h4>Headquaters</h4>
+                  <p>Mobile:<a href="#"> +9196541414</a></p>
+                  <p style="    margin-top: -18px;">Email:<a href="#"> automantiaheadquaters@gmail.com</a></p>
+
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6  mt-4  footerheadings">
+                  <h4>Dealership Enquiry</h4>
+                  <p>Mobile:<a href="#"> +91745851236</a></p>
+                  <p style="    margin-top: -18px;">Email:<a href="#"> AutomanTia@gmail.com</a></p>
+                </div>
+                <div class="col-md-6 mt-4 footerheadings">
+                  <h4>Other Enquiry</h4>
+
+                  <p style="    margin-top: px;">Email:<a href="#"> Automantiaothers@gmail.com</a></p>
+
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6  mt-4 footericons  ">
+                  <a href=""><i class="fa-brands fa-linkedin fa-3x"></i></a>
+                  <a href=""><i class="fa-brands fa-facebook fa-3x"></i></a>
+                  <a href=""><i class="fa-brands fa-twitter fa-3x"></i></a>
+                  <a href=""><i class="fa-brands fa-instagram fa-3x"></i></a>
+                </div>
+              </div>
+
             </div>
-
+          </div>
         </div>
+      </div>
+
+    </div>
+    <div class="container-fluid footerend w-100">
+      <div class="container">
+        <div class="footerend2 text-center">
+          <p>PRIVACY POLICY | TERMS AND CONDITIONS | <a href="#">Blog</a></p>
+
+          <p>COPYRIGHT © 2021 <a href="#">AutomanTia PRIVATE LIMITED</a></p>
+        </div>
+      </div>
+
+    </div>
 
 
 
 
-    </section>
-    <!-- footer section end -->
+  </section>
+  <!-- footer section end -->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
