--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         <div class="footerend2 text-center">
           <p>PRIVACY POLICY | TERMS AND CONDITIONS | <a href="#">Blog</a></p>
 
-          <p>COPYRIGHT © 2021 <a href="#">FIRST FIDDLE F&B PRIVATE LIMITED</a></p>
+          <p>COPYRIGHT © 2021 <a href="#">AutomanTia PRIVATE LIMITED</a></p>
         </div>
       </div>
 
